
[TestImportDeclarations/default_import - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
            },
            NamedImports: nil,
            NamespaceAs:  (*dts_parser.Ident)(nil),
            From:         "module",
            TypeOnly:     false,
            span:         ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:25},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/named_import_single - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:29},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/named_import_multiple - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "baz",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:20},
                            End:      ast.Location{Line:1, Column:23},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:20},
                            End:      ast.Location{Line:1, Column:23},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:20},
                        End:      ast.Location{Line:1, Column:23},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:39},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/named_import_with_alias - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:20},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:36},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/named_import_mixed - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:22},
                            End:      ast.Location{Line:1, Column:25},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:41},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/namespace_import - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  nil,
            NamespaceAs:   &dts_parser.Ident{
                Name: "foo",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:13},
                    End:      ast.Location{Line:1, Column:16},
                    SourceID: 0,
                },
            },
            From:     "module",
            TypeOnly: false,
            span:     ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:30},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/default_and_named - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
            },
            NamedImports: {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:34},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/default_and_namespace - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: &dts_parser.Ident{
                Name: "foo",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:11},
                    SourceID: 0,
                },
            },
            NamedImports: nil,
            NamespaceAs:  &dts_parser.Ident{
                Name: "bar",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:18},
                    End:      ast.Location{Line:1, Column:21},
                    SourceID: 0,
                },
            },
            From:     "module",
            TypeOnly: false,
            span:     ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:35},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/side_effect_import - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  nil,
            NamespaceAs:   (*dts_parser.Ident)(nil),
            From:          "module",
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:16},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/type-only_import - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    true,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:34},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/type-only_namespace - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  nil,
            NamespaceAs:   &dts_parser.Ident{
                Name: "foo",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:18},
                    End:      ast.Location{Line:1, Column:21},
                    SourceID: 0,
                },
            },
            From:     "module",
            TypeOnly: true,
            span:     ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:35},
                SourceID: 0,
            },
        },
    },
}
---

[TestImportDeclarations/trailing_comma - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "module",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:35},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_variable - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.VarDecl{
                Name: &dts_parser.Ident{
                    Name: "x",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:20},
                        End:      ast.Location{Line:1, Column:21},
                        SourceID: 0,
                    },
                },
                TypeAnn: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:23},
                        End:      ast.Location{Line:1, Column:29},
                        SourceID: 0,
                    },
                },
                Readonly: false,
                span:     ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:29},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:29},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_function - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.FuncDecl{
                Name: &dts_parser.Ident{
                    Name: "foo",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:25},
                        End:      ast.Location{Line:1, Column:28},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Params:     {
                },
                ReturnType: &dts_parser.PrimitiveType{
                    Kind: 2,
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:32},
                        End:      ast.Location{Line:1, Column:36},
                        SourceID: 0,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:36},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:36},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_type_alias - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.TypeDecl{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:16},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                TypeAnn:    &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:19},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:25},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:25},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_interface - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.InterfaceDecl{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:18},
                        End:      ast.Location{Line:1, Column:21},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Extends:    nil,
                Members:    {
                    &dts_parser.PropertySignature{
                        Name: &dts_parser.Ident{
                            Name: "x",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:24},
                                End:      ast.Location{Line:1, Column:25},
                                SourceID: 0,
                            },
                        },
                        TypeAnn: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:27},
                                End:      ast.Location{Line:1, Column:33},
                                SourceID: 0,
                            },
                        },
                        Optional: false,
                        Readonly: false,
                        span:     ast.Span{
                            Start:    ast.Location{Line:1, Column:24},
                            End:      ast.Location{Line:1, Column:33},
                            SourceID: 0,
                        },
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:35},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:35},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_class - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.ClassDecl{
                Name: &dts_parser.Ident{
                    Name: "Baz",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:22},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Extends:    nil,
                Implements: nil,
                Members:    {
                },
                Abstract: false,
                span:     ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:28},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:28},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_enum - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.EnumDecl{
                Name: &dts_parser.Ident{
                    Name: "Color",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
                Members: {
                    &dts_parser.EnumMember{
                        Name: &dts_parser.Ident{
                            Name: "Red",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:21},
                                End:      ast.Location{Line:1, Column:24},
                                SourceID: 0,
                            },
                        },
                        Value: nil,
                        span:  ast.Span{
                            Start:    ast.Location{Line:1, Column:21},
                            End:      ast.Location{Line:1, Column:24},
                            SourceID: 0,
                        },
                    },
                    &dts_parser.EnumMember{
                        Name: &dts_parser.Ident{
                            Name: "Green",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:26},
                                End:      ast.Location{Line:1, Column:31},
                                SourceID: 0,
                            },
                        },
                        Value: nil,
                        span:  ast.Span{
                            Start:    ast.Location{Line:1, Column:26},
                            End:      ast.Location{Line:1, Column:31},
                            SourceID: 0,
                        },
                    },
                    &dts_parser.EnumMember{
                        Name: &dts_parser.Ident{
                            Name: "Blue",
                            span: ast.Span{
                                Start:    ast.Location{Line:1, Column:33},
                                End:      ast.Location{Line:1, Column:37},
                                SourceID: 0,
                            },
                        },
                        Value: nil,
                        span:  ast.Span{
                            Start:    ast.Location{Line:1, Column:33},
                            End:      ast.Location{Line:1, Column:37},
                            SourceID: 0,
                        },
                    },
                },
                Const: false,
                span:  ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:39},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:39},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_namespace - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.NamespaceDecl{
                Name: &dts_parser.Ident{
                    Name: "Utils",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:18},
                        End:      ast.Location{Line:1, Column:23},
                        SourceID: 0,
                    },
                },
                Statements: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:27},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:27},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/named_export_single - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/named_export_multiple - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "baz",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:20},
                            End:      ast.Location{Line:1, Column:23},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "baz",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:20},
                            End:      ast.Location{Line:1, Column:23},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:20},
                        End:      ast.Location{Line:1, Column:23},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:23},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/named_export_with_alias - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:20},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:20},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/named_export_mixed - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "baz",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:22},
                            End:      ast.Location{Line:1, Column:25},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:25},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:25},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_all - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:   nil,
            NamedExports:  nil,
            From:          "module",
            ExportDefault: false,
            ExportAll:     true,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:23},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_all_as_namespace - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:13},
                            End:      ast.Location{Line:1, Column:16},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:13},
                            End:      ast.Location{Line:1, Column:16},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:13},
                        End:      ast.Location{Line:1, Column:16},
                        SourceID: 0,
                    },
                },
            },
            From:          "module",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:30},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_from_module - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            From:          "module",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:29},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_from_with_alias - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:17},
                            End:      ast.Location{Line:1, Column:20},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:20},
                        SourceID: 0,
                    },
                },
            },
            From:          "module",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:36},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_default_interface - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.InterfaceDecl{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:26},
                        End:      ast.Location{Line:1, Column:29},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Extends:    nil,
                Members:    {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:33},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: true,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:33},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_default_type - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.TypeDecl{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:21},
                        End:      ast.Location{Line:1, Column:24},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                TypeAnn:    &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:27},
                        End:      ast.Location{Line:1, Column:33},
                        SourceID: 0,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:16},
                    End:      ast.Location{Line:1, Column:33},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: true,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:33},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_assignment - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/export_as_namespace - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "MyLib",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:21},
                            End:      ast.Location{Line:1, Column:26},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "MyLib",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:21},
                            End:      ast.Location{Line:1, Column:26},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:21},
                        End:      ast.Location{Line:1, Column:26},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:26},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/type-only_export - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "Foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "Foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      true,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:18},
                SourceID: 0,
            },
        },
    },
}
---

[TestExportDeclarations/trailing_comma - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:18},
                SourceID: 0,
            },
        },
    },
}
---

[TestComplexImportExportScenarios/multiple_imports - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "a",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:24},
                SourceID: 0,
            },
        },
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:13},
                            End:      ast.Location{Line:2, Column:16},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:13},
                            End:      ast.Location{Line:2, Column:16},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:13},
                        End:      ast.Location{Line:2, Column:16},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "b",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:2, Column:4},
                End:      ast.Location{Line:2, Column:27},
                SourceID: 0,
            },
        },
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  nil,
            NamespaceAs:   &dts_parser.Ident{
                Name: "c",
                span: ast.Span{
                    Start:    ast.Location{Line:3, Column:16},
                    End:      ast.Location{Line:3, Column:17},
                    SourceID: 0,
                },
            },
            From:     "c",
            TypeOnly: false,
            span:     ast.Span{
                Start:    ast.Location{Line:3, Column:4},
                End:      ast.Location{Line:3, Column:26},
                SourceID: 0,
            },
        },
    },
}
---

[TestComplexImportExportScenarios/imports_and_exports - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "Foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "Foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "lib",
            TypeOnly:    false,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:26},
                SourceID: 0,
            },
        },
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.InterfaceDecl{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:21},
                        End:      ast.Location{Line:2, Column:24},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Extends:    {
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Foo",
                            span: ast.Span{
                                Start:    ast.Location{Line:2, Column:33},
                                End:      ast.Location{Line:2, Column:36},
                                SourceID: 0,
                            },
                        },
                        TypeArgs: nil,
                        span:     ast.Span{
                            Start:    ast.Location{Line:2, Column:33},
                            End:      ast.Location{Line:2, Column:36},
                            SourceID: 0,
                        },
                    },
                },
                Members: {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:2, Column:11},
                    End:      ast.Location{Line:2, Column:40},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:2, Column:4},
                End:      ast.Location{Line:2, Column:40},
                SourceID: 0,
            },
        },
    },
}
---

[TestComplexImportExportScenarios/re-export_pattern - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "foo",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:10},
                            End:      ast.Location{Line:1, Column:13},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:10},
                        End:      ast.Location{Line:1, Column:13},
                        SourceID: 0,
                    },
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:18},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:18},
                        SourceID: 0,
                    },
                },
            },
            From:          "module",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:34},
                SourceID: 0,
            },
        },
        &dts_parser.ExportDecl{
            Declaration:   nil,
            NamedExports:  nil,
            From:          "other",
            ExportDefault: false,
            ExportAll:     true,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:2, Column:4},
                End:      ast.Location{Line:2, Column:25},
                SourceID: 0,
            },
        },
    },
}
---

[TestComplexImportExportScenarios/type-only_imports_and_exports - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ImportDecl{
            DefaultImport: (*dts_parser.Ident)(nil),
            NamedImports:  {
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "A",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:16},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "A",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:15},
                            End:      ast.Location{Line:1, Column:16},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:15},
                        End:      ast.Location{Line:1, Column:16},
                        SourceID: 0,
                    },
                },
                &dts_parser.ImportSpecifier{
                    Imported: &dts_parser.Ident{
                        Name: "B",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:18},
                            End:      ast.Location{Line:1, Column:19},
                            SourceID: 0,
                        },
                    },
                    Local: &dts_parser.Ident{
                        Name: "B",
                        span: ast.Span{
                            Start:    ast.Location{Line:1, Column:18},
                            End:      ast.Location{Line:1, Column:19},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:18},
                        End:      ast.Location{Line:1, Column:19},
                        SourceID: 0,
                    },
                },
            },
            NamespaceAs: (*dts_parser.Ident)(nil),
            From:        "types",
            TypeOnly:    true,
            span:        ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:34},
                SourceID: 0,
            },
        },
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "A",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:18},
                            End:      ast.Location{Line:2, Column:19},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "A",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:18},
                            End:      ast.Location{Line:2, Column:19},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:18},
                        End:      ast.Location{Line:2, Column:19},
                        SourceID: 0,
                    },
                },
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "B",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:21},
                            End:      ast.Location{Line:2, Column:22},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "B",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:21},
                            End:      ast.Location{Line:2, Column:22},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:21},
                        End:      ast.Location{Line:2, Column:22},
                        SourceID: 0,
                    },
                },
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      true,
            span:          ast.Span{
                Start:    ast.Location{Line:2, Column:4},
                End:      ast.Location{Line:2, Column:22},
                SourceID: 0,
            },
        },
    },
}
---

[TestComplexImportExportScenarios/mixed_exports - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.InterfaceDecl{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:18},
                        End:      ast.Location{Line:1, Column:21},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Extends:    nil,
                Members:    {
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:25},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:25},
                SourceID: 0,
            },
        },
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
                &dts_parser.ExportSpecifier{
                    Local: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:13},
                            End:      ast.Location{Line:2, Column:16},
                            SourceID: 0,
                        },
                    },
                    Exported: &dts_parser.Ident{
                        Name: "bar",
                        span: ast.Span{
                            Start:    ast.Location{Line:2, Column:13},
                            End:      ast.Location{Line:2, Column:16},
                            SourceID: 0,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:2, Column:13},
                        End:      ast.Location{Line:2, Column:16},
                        SourceID: 0,
                    },
                },
            },
            From:          "lib",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:2, Column:4},
                End:      ast.Location{Line:2, Column:29},
                SourceID: 0,
            },
        },
        &dts_parser.ExportDecl{
            Declaration: &dts_parser.ClassDecl{
                Name: &dts_parser.Ident{
                    Name: "Baz",
                    span: ast.Span{
                        Start:    ast.Location{Line:3, Column:25},
                        End:      ast.Location{Line:3, Column:28},
                        SourceID: 0,
                    },
                },
                TypeParams: nil,
                Extends:    nil,
                Implements: nil,
                Members:    {
                },
                Abstract: false,
                span:     ast.Span{
                    Start:    ast.Location{Line:3, Column:19},
                    End:      ast.Location{Line:3, Column:32},
                    SourceID: 0,
                },
            },
            NamedExports:  nil,
            From:          "",
            ExportDefault: true,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:3, Column:4},
                End:      ast.Location{Line:3, Column:32},
                SourceID: 0,
            },
        },
    },
}
---

[TestModuleErrorCases/import_without_from - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:15},
                End:      ast.Location{Line:1, Column:15},
                SourceID: 0,
            },
            Message: "Expected 104 but got 23",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestModuleErrorCases/import_missing_braces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:13},
                End:      ast.Location{Line:1, Column:16},
                SourceID: 0,
            },
            Message: "Expected 104 but got 39",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:17},
                End:      ast.Location{Line:1, Column:21},
                SourceID: 0,
            },
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:17},
                End:      ast.Location{Line:1, Column:21},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:22},
                End:      ast.Location{Line:1, Column:22},
                SourceID: 0,
            },
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:22},
                End:      ast.Location{Line:1, Column:22},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:29},
                End:      ast.Location{Line:1, Column:29},
                SourceID: 0,
            },
            Message: "Expected identifier",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:23},
                End:      ast.Location{Line:1, Column:29},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestModuleErrorCases/export_without_name - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestModuleErrorCases/malformed_namespace_import - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:10},
                End:      ast.Location{Line:1, Column:13},
                SourceID: 0,
            },
            Message: "Expected 105 but got 39",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:14},
                End:      ast.Location{Line:1, Column:18},
                SourceID: 0,
            },
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:14},
                End:      ast.Location{Line:1, Column:18},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:19},
                End:      ast.Location{Line:1, Column:19},
                SourceID: 0,
            },
            Message: "Expected interface, type, enum, or namespace declaration",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:19},
                End:      ast.Location{Line:1, Column:19},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:26},
                End:      ast.Location{Line:1, Column:26},
                SourceID: 0,
            },
            Message: "Expected identifier",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:20},
                End:      ast.Location{Line:1, Column:26},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestModuleErrorCases/export_=_without_identifier - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:10},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
            Message: "Expected identifier",
        },
        &dts_parser.Error{
            Span: ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
            Message: "Unexpected token",
        },
    },
    "module": &dts_parser.Module{
        Statements: {
        },
    },
}
---

[TestExportDeclarations/export_without_any_exports - 1]
&dts_parser.Module{
    Statements: {
        &dts_parser.ExportDecl{
            Declaration:  nil,
            NamedExports: {
            },
            From:          "",
            ExportDefault: false,
            ExportAll:     false,
            TypeOnly:      false,
            span:          ast.Span{
                Start:    ast.Location{Line:1, Column:1},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
        },
    },
}
---
